# algo-visualizer

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  algo-visualizer.cabal
app/: API.hs  Main.hs  Types.hs
app/Algorithms/: BST.hs  Graphs.hs  Sorting.hs  Trees.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
