cabal-version:      3.0
name:               algo-visualizer
version:            0.1.0.0
synopsis:           A Haskell Algorithm Visualizer to accompany a front end
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ethan Gat
maintainer:         ethangat725@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded

executable algo-visualizer
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Types
        API
        Algorithms.Sorting
        Algorithms.Trees
        Algorithms.BST
    build-depends:
        base ^>=4.18.3.0,
        servant,
        servant-server,
        warp,
        wai,
        wai-cors,
        aeson,
        text,
        containers
    default-extensions:
        DeriveGeneric
        OverloadedStrings
        DerivingStrategies
        DeriveAnyClass
        DataKinds
